--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,7 +6,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<img src="my-image.jpg" alt="My Image" width="70%">
+<img src="my-image.jpg" alt="My Image">
 <h1>My Blog</h1>
 <button class="btn" onclick="showTab('tech')">Tech</button>
 <button class="btn" onclick="showTab('jokes')">Jokes</button>
