--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <h2>Previous Posts</h2>
 </div>
 
-<script src="index.js"></script>
+<script type="module" src="index.js"></script>
+
 </body>
 </html>
