--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <h2>Previous Posts</h2>
 </div>
 
-<script type="module" src="index.js"></script>
+<script src="index.js"></script>
 
 </body>
 </html>
