--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -36,7 +37,7 @@
     <h2>Previous Posts</h2>
 </div>
 
-<script src="index.js"></script>
-
+<!-- Import JavaScript as a module -->
+<script type="module" src="index.js"></script>
 </body>
 </html>
