--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,37 +6,62 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<img src="my-image.jpg" alt="My Image">
-<h1>My Blog</h1>
-<button class="btn" onclick="showTab('tech')">Tech</button>
-<button class="btn" onclick="showTab('jokes')">Jokes</button>
-<button class="btn" onclick="showTab('new-post')">New Post</button>
-<button class="btn" onclick="login()">Login with Google</button>
 
-<div id="tech" class="tab active">
-    <h2>The Future of AI</h2>
-    <p>Exploring AI advancements in 2025...</p>
-    <h2>Why Rust is Taking Over</h2>
-    <p>A look into Rust's memory safety...</p>
+<!-- Top Bar -->
+<div class="top-bar">
+    <h1>My Blog</h1>
+    <div class="user-info">
+        <span id="user-name">Not logged in</span>
+        <button class="btn" onclick="login()" id="login-btn">Login with Google</button>
+    </div>
 </div>
 
-<div id="jokes" class="tab">
-    <button class="btn" onclick="showJoke('dad')">Dad Jokes</button>
-    <button class="btn" onclick="showJoke('sexy')">Sexy Jokes</button>
-    <p id="joke"></p>
+<!-- Background Video -->
+<video autoplay muted loop id="glitter-video">
+    <source src="new.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
+
+<!-- Image Section -->
+<div class="image-container">
+    <img src="my-image.jpg" alt="My Image">
 </div>
 
-<div id="new-post" class="tab" style="display:none;">
-    <h2>Create New Post</h2>
-    <input type="text" id="post-title" placeholder="Title"/><br><br>
-    <textarea id="post-content" placeholder="Write your post here..."></textarea><br><br>
-    <button class="btn" onclick="addPost()">Add Post</button>
+<!-- Tabs -->
+<div class="container">
+    <button class="btn" onclick="showTab('tech')">Tech</button>
+    <button class="btn" onclick="showTab('jokes')">Jokes</button>
+    <button class="btn" onclick="showTab('new-post')">New Post</button>
+
+    <div id="tech" class="tab active">
+        <h2>The Future of AI</h2>
+        <p>Exploring AI advancements in 2025...</p>
+        <h2>Why Rust is Taking Over</h2>
+        <p>A look into Rust's memory safety...</p>
+    </div>
+
+    <div id="jokes" class="tab">
+        <button class="btn" onclick="showJoke('dad')">Dad Jokes</button>
+        <button class="btn" onclick="showJoke('sexy')">Sexy Jokes</button>
+        <p id="joke"></p>
+    </div>
+
+    <div id="new-post" class="tab" style="display:none;">
+        <h2>Create New Post</h2>
+        <input type="text" id="post-title" placeholder="Title"/><br><br>
+        <textarea id="post-content" placeholder="Write your post here..."></textarea><br><br>
+        <button class="btn" onclick="addPost()">Add Post</button>
+    </div>
 </div>
 
-<div id="blog-posts">
+<!-- Blog Posts -->
+<div id="blog-posts" class="container">
     <h2>Previous Posts</h2>
 </div>
 
+<h4> Created with 😍 by Sujith</h4>
+
+<!-- JavaScript -->
 <script src="index.js" defer></script>
 </body>
 </html>
