Done with the code

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
     <button class="btn" onclick="showJoke('sexy')">Sexy Jokes</button>
 </div>
 
+<!-- Add this container for displaying the joke -->
+<div id="joke" style="margin-top: 20px; font-size: 1.2em; font-weight: bold;"></div>
+
     <div id="new-post" class="tab" style="display:none;">
         <h2>Create New Post</h2>
         <input type="text" id="post-title" placeholder="Title"/><br><br>
